# noticeable

./: Cargo.toml  README.md
src/: callback.rs  lib.rs  observable.rs  subscriber.rs
src/tests/: mod.rs  observable_tests.rs
