[package]
name = "noticeable"
version = "0.2.0"
edition = "2021"
readme = "README.md"
description = "A library for lazy observables"
license="GPL-3.0"
repository="https://github.com/rob-mur/noticeable/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
